Set the default port for the tast and the application to 80

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir /app
 
 COPY ./build/libs/server-dev.jar /app/server-dev.jar
 
-CMD ["java", "-jar", "/app/server-dev.jar"]
+CMD ["java", "-jar", "-Dserver.port=80", "/app/server-dev.jar"]
