Comments for swagger docs

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 
 spring.resources.cache.cachecontrol.max-age=0
+
+# swagger-ui custom path
+#springdoc.swagger-ui.path=/swagger-ui.html
+
+# Show schema definitions
+#springdoc.remove-broken-reference-definitions=false
