--- a/server/fargate_service_cfn.yml
+++ b/server/fargate_service_cfn.yml
@@ -17,8 +17,20 @@ Parameters:
     Default: "/"
   Memory:
     Type: String
+    Description: >
+       0.5GB, 1GB, 2GB - Available cpu values: 256 (.25 vCPU)
+       1GB, 2GB, 3GB, 4GB - Available cpu values: 512 (.5 vCPU)
+       2GB, 3GB, 4GB, 5GB, 6GB, 7GB, 8GB - Available cpu values: 1024 (1 vCPU)
+       Between 4GB and 16GB in 1GB increments - Available cpu values: 2048 (2 vCPU)
+       Between 8GB and 30GB in 1GB increments - Available cpu values: 4096 (4 vCPU)
   Cpu:
     Type: String
+    Description: >
+      256 (.25 vCPU) - Available memory values: 0.5GB, 1GB, 2GB
+      512 (.5 vCPU) - Available memory values: 1GB, 2GB, 3GB, 4GB
+      1024 (1 vCPU) - Available memory values: 2GB, 3GB, 4GB, 5GB, 6GB, 7GB, 8GB
+      2048 (2 vCPU) - Available memory values: Between 4GB and 16GB in 1GB increments
+      4096 (4 vCPU) - Available memory values: Between 8GB and 30GB in 1GB increments
 
 Resources:
   TaskDefinition:
